--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -169,7 +170,8 @@
             <div class="contact-icons">
                 <a href="https://www.linkedin.com/in/emmanuel-melchizedek-vunnava-56b370194/" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/El-Patron2" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://leetcode.com/El_Patron2/" target="_blank"><i class="fab fa-leetcode"></i></a>
+                <a href="https://leetcode.com/u/EmmanuelMelchizedek/" target="_blank"><i class="fas fa-code"></i></a> <!-- LeetCode -->
+                <a href="https://www.kaggle.com/emmanuelvunnava" target="_blank"><i class="fas fa-chart-bar"></i></a> <!-- Kaggle -->
             </div>
         </section>
     </main>
