--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
             <div class="hero-content">
                 <h1>Emmanuel Melchizedek Vunnava</h1>
                 <p>I'm a <span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
-                <a href="https://drive.google.com/file/d/1dRA6mDbmX6UMcZup2QqtZnKA3Mkt0Q2T/view?usp=drive_link" class="btn" target="_blank">Resume</a>
+                <a href="https://drive.google.com/file/d/1lgBPGs_zQeo26XfL5lwBEy_sbWstn2k1/view?usp=sharing" class="btn" target="_blank">Resume</a>
             </div>
         </section>
 
@@ -165,7 +165,7 @@
             <h2>Get in Touch 📬</h2>
             <div class="contact-buttons">
                 <a href="mailto:emmanuelmelchizedekvunnava@gmail.com" class="btn">Email Me</a>
-                <a href="https://drive.google.com/file/d/1dRA6mDbmX6UMcZup2QqtZnKA3Mkt0Q2T/view?usp=drive_link" class="btn" target="_blank">View Resume</a>
+                <a href="https://drive.google.com/file/d/1lgBPGs_zQeo26XfL5lwBEy_sbWstn2k1/view?usp=sharing" class="btn" target="_blank">View Resume</a>
             </div>
             <div class="contact-icons">
                 <a href="https://www.linkedin.com/in/emmanuel-melchizedek-vunnava-56b370194/" target="_blank"><i class="fab fa-linkedin"></i></a>
