--- a/templates/index.html
+++ b/templates/index.html
@@ -153,10 +153,26 @@
             <h2>Certifications 🏆</h2>
             <div class="certifications-container">
                 <ul class="certifications-list">
-                    <li><i class="fas fa-certificate"></i> AWS Cloud Solutions Architect - AWS Professional Certificate</li>
-                    <li><i class="fas fa-certificate"></i> Elements of AI - University of Helsinki</li>
-                    <li><i class="fas fa-certificate"></i> The Nuts and Bolts of Machine Learning - Google Certificate</li>
-                    <li><i class="fas fa-certificate"></i> Foundations of Data Science - Google Certificate</li>
+                    <li>
+                        <i class="fas fa-certificate"></i>
+                        <span>AWS Cloud Solutions Architect - AWS Professional Certificate</span>
+                        <a href="https://www.coursera.org/account/accomplishments/professional-cert/W5R77DDETWE3" class="view-btn" target="_blank">View</a>
+                    </li>
+                    <li>
+                        <i class="fas fa-certificate"></i>
+                        <span>Elements of AI - University of Helsinki</span>
+                        <a href="https://certificates.mooc.fi/validate/attzsl38tmm" class="view-btn" target="_blank">View</a>
+                    </li>
+                    <li>
+                        <i class="fas fa-certificate"></i>
+                        <span>The Nuts and Bolts of Machine Learning - Google Certificate</span>
+                        <a href="https://www.coursera.org/account/accomplishments/verify/8L7QVWF96B9L" class="view-btn" target="_blank">View</a>
+                    </li>
+                    <li>
+                        <i class="fas fa-certificate"></i>
+                        <span>Foundations of Data Science - Google Certificate</span>
+                        <a href="https://www.coursera.org/account/accomplishments/verify/XAUW268X4BV3" class="view-btn" target="_blank">View</a>
+                    </li>
                 </ul>
             </div>
         </section>
